
[TestInstanceGenerator_Generate/with_zero_port_uses_default - 1]
APIVersion: fluxcd.controlplane.io/v1
Kind: FluxInstance
Metadata:
  Labels:
    app.kubernetes.io/managed-by: ksail
  Name: flux
  Namespace: flux-system
Spec:
  Distribution:
    Registry: ghcr.io/fluxcd
    Version: 2.x
  Sync:
    Interval: 1m0s
    Kind: OCIRepository
    Path: .
    Ref: latest
    URL: oci://registry.localhost:5000/test-project

---

[TestInstanceGenerator_Generate/with_custom_interval - 1]
APIVersion: fluxcd.controlplane.io/v1
Kind: FluxInstance
Metadata:
  Labels:
    app.kubernetes.io/managed-by: ksail
  Name: flux
  Namespace: flux-system
Spec:
  Distribution:
    Registry: ghcr.io/fluxcd
    Version: 2.x
  Sync:
    Interval: 5m0s
    Kind: OCIRepository
    Path: .
    Ref: latest
    URL: oci://registry.localhost:5000/test-project

---

[TestInstanceGenerator_Generate/with_custom_registry_host_and_port - 1]
APIVersion: fluxcd.controlplane.io/v1
Kind: FluxInstance
Metadata:
  Labels:
    app.kubernetes.io/managed-by: ksail
  Name: flux
  Namespace: flux-system
Spec:
  Distribution:
    Registry: ghcr.io/fluxcd
    Version: 2.x
  Sync:
    Interval: 1m0s
    Kind: OCIRepository
    Path: .
    Ref: latest
    URL: oci://custom-registry.localhost:8080/my-project

---

[TestInstanceGenerator_Generate/with_default_values - 1]
APIVersion: fluxcd.controlplane.io/v1
Kind: FluxInstance
Metadata:
  Labels:
    app.kubernetes.io/managed-by: ksail
  Name: flux
  Namespace: flux-system
Spec:
  Distribution:
    Registry: ghcr.io/fluxcd
    Version: 2.x
  Sync:
    Interval: 1m0s
    Kind: OCIRepository
    Path: .
    Ref: latest
    URL: oci://ksail-registry.localhost:5000/ksail

---
